# flutter_plugins

./: .gitignore  makefile  melos.yaml  pubspec.yaml  readme.md
.husky/: pre-commit
activate_window/: README.md  pubspec.yaml
activate_window/lib/: activate_window.dart
activate_window/macos/: activate_window.podspec
activate_window/macos/Classes/: ActivateWindow.swift  ActivateWindowPlugin.swift
aria2/lib/models/: aria2File.dart
aria2/lib/modules/: aria2_connection.dart
bindgo/: README.md
bindgo/lib/: bindgo.dart
bindgo/lib/src/runner/: stub.dart  (+2 more)
clipboard_listener/: README.md  flutter_rust_bridge.yaml
clipboard_listener/example/lib/: main.dart
clipboard_listener/example/linux/: CMakeLists.txt
clipboard_listener/example/windows/: CMakeLists.txt
clipboard_listener/lib/: clipboard_listener.dart
clipboard_listener/linux/: CMakeLists.txt
clipboard_listener/macos/: clipboard_listener.podspec
clipboard_listener/rust/src/: frb_generated.rs
rust_ffi_lib/: flutter_rust_bridge.yaml  makefile
rust_ffi_lib/android/: build.gradle  settings.gradle
rust_ffi_lib/example/: pubspec.yaml
rust_ffi_lib/example/integration_test/: simple_test.dart
rust_ffi_lib/example/lib/: main.dart
rust_ffi_lib/example/linux/: my_application.cc
rust_ffi_lib/lib/: rust_ffi_lib.dart
rust_ffi_lib/linux/: CMakeLists.txt
rust_ffi_lib/macos/: rust_ffi_lib.podspec
rust_ffi_lib/rust/: Cargo.toml
rust_ffi_lib/rust/src/: frb_generated.rs
rust_ffi_lib/rust/src/api/: mod.rs  paste.rs  sys.rs  tiny_image.rs
system_windows/macos/Classes/: SystemWindowsPlugin.swift
(+23 files in other folders)
