[package]
name = "rust_ffi_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
enigo = "0.2.1"
flutter_rust_bridge = "=2.3.0"
image = "0.25.2"
oxipng = { version = "9.1.2", features = [
  "parallel",
  "zopfli",
  "filetime",
], default-features = false }
sysinfo = "0.31.4"
webp = "0.3.0"
xcap = "0.0.13"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
